# blog-generator

./: Cargo.toml
src/: main.rs
