[package]
name = "blog-generator"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
dolmen = { path = "../pastex/dolmen" }
glob = "0.3"
pastex = { path = "../pastex/pastex" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
