[package]
name = "blog-generator"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
anyhow = "1.0"
dolmen = { path = "../dolmen/dolmen" }
dolmen_dsl = { path = "../dolmen/dolmen-dsl" }
glob = "0.3"
once_cell = "1.9"
pastex = { path = "../pastex/pastex" }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.5"
